--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^3.0.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
+    "cron": "^1.4.1",
     "debug": "~2.6.9",
     "dotenv": "^6.1.0",
     "express": "~4.16.0",
