--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "firebase": "^5.5.5",
     "vue": "^2.5.17",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
     "vue-wysiwyg": "^1.7.2",
     "vuex": "^3.0.1"
