--- a/client/.firebaserc
+++ b/client/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "default": "overflow-9c1c6"
+    "overflow": "hactivoverflow-84b5d",
+    "default": "hactivoverflow-84b5d"
   }
 }
